--- a/frontend/src/seoin/seoin_style.css
+++ b/frontend/src/seoin/seoin_style.css
@@ -276,6 +276,35 @@ a {
   background-color: #e9ecef; 
 } 
 
+.tooltip-link {
+  position: relative;
+  text-decoration: none;
+  color: inherit;
+}
+
+.tooltip {
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  background-color: #867a7a4b;
+  color: #fff;
+  text-align: center;
+  /* border-radius: 5px; */
+  padding: 2px;
+  font-size: 12px;
+  white-space: nowrap;
+  bottom: 100%; /* 툴팁이 링크 위에 표시 */
+  left: 50%;
+  transform: translateX(-50%);
+  transition: opacity 0.2s ease-in-out;
+  z-index: 1;
+}
+
+.tooltip-link:hover .tooltip {
+  visibility: visible;
+  opacity: 1;
+}
+
 
 
 .vote-details,
